k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: next-kube-app
  labels:
    app.kubernetes.io/name: next-kube-app
