k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-kube-app
  namespace: next-kube-app
  labels:
    app.kubernetes.io/name: next-kube-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: next-kube-app
  ports:
    - name: http
      port: 80
      targetPort: http
