k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-kube-app
  namespace: next-kube-app
  labels:
    app.kubernetes.io/name: next-kube-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${INGRESS_HOST}
      secretName: next-kube-app-tls
  rules:
    - host: ${INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-kube-app
                port:
                  number: 80
